added README.md .env files

--- a/templates/uav_dealer_home_page.html
+++ b/templates/uav_dealer_home_page.html
@@ -16,7 +16,7 @@
 <h3 class="w3-container w3-bar w3-black w3-large" style="padding:8px"><center>Post Vehicles<center></h3>
 
 <form class="w3-container" action="/uav_dealer_dashboard/add_vehicle/" method="post">{% csrf_token %}
-  <lable>UAV Name :</lable> <input class="w3-input" type="text" name="car_name"><br><br>
+  <lable>UAV Name :</lable> <input class="w3-input" type="text" name="uav_name"><br><br>
   <lable>Color :</lable> <input class="w3-input" type="text" name="color"><br><br>
   <lable>City :</lable> <input class="w3-input" type="text" name="city"><br><br>
   <lable>Pincode :</lable> <input class="w3-input" type="text" name="pincode"><br><br>
