--- a/templates/customer_confirmed.html
+++ b/templates/customer_confirmed.html
@@ -16,7 +16,7 @@
 <b>Vehicle :</b> {{order.vehicle.uav_name}}<br><br>
 <b>Duration :</b> {{order.days}} days<br><br>
 <b>UAV-Dealer :</b> {{order.uav_dealer.uav_dealer.first_name}} {{order.uav_dealer.uav_dealer.last_name}}<br><br>
-<b>UAV-Dealer's Contact:</b> {{order.car_dealer.mobile}}<br><br>
+<b>UAV-Dealer's Contact:</b> {{order.uav_dealer.mobile}}<br><br>
 </div>
 </div>
 {% endblock %}
